--- a/backend/.env.example
+++ b/backend/.env.example
@@ -8,7 +8,12 @@ FRONTEND_URL=http://localhost:3000
 # Session Configuration
 SESSION_SECRET=change-this-to-a-long-random-string-at-least-32-characters
 SESSION_MAX_AGE=3600000
-# For production, use Redis for session storage
+
+# Database Configuration (Neon Postgres - Recommended)
+# Get your connection string from: https://console.neon.tech
+# DATABASE_URL=postgresql://user:password@ep-xxxxx.us-east-2.aws.neon.tech/neondb?sslmode=require
+
+# Alternative: Redis for session storage
 # REDIS_URL=redis://localhost:6379
 
 # Encryption Key (32 bytes hex string for AES-256)
