--- a/backend/package.json
+++ b/backend/package.json
@@ -19,23 +19,25 @@
   "license": "MIT",
   "dependencies": {
     "@azure/msal-node": "^2.6.0",
-    "express": "^4.18.2",
-    "express-session": "^1.17.3",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
     "axios": "^1.6.0",
-    "helmet": "^7.1.0",
-    "express-rate-limit": "^7.1.5",
-    "crypto": "^1.0.1",
-    "cookie-parser": "^1.4.6",
-    "morgan": "^1.10.0",
-    "express-validator": "^7.0.1",
+    "connect-pg-simple": "^9.0.1",
     "connect-redis": "^7.1.0",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "crypto": "^1.0.1",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
+    "express-session": "^1.17.3",
+    "express-validator": "^7.0.1",
+    "helmet": "^7.1.0",
+    "morgan": "^1.10.0",
+    "pg": "^8.16.3",
     "redis": "^4.6.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2",
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "nodemon": "^3.0.2"
   },
   "engines": {
     "node": ">=18.0.0"
