refactor: Production hardening and manifest.json 401 fix
FRONTEND FIXES:
- Enhanced public/index.html with PWA support and CSP headers
- Added security meta tags for mobile apps
- Updated manifest link to use %PUBLIC_URL% (CRA standard)

- Added graceful manifest.json error handling in src/index.js
- Manifest fetch failures no longer block app load
- PWA features gracefully disabled if manifest unavailable

BACKEND IMPROVEMENTS:
- Enhanced CORS configuration with dynamic origin validation
- Proper error logging for rejected origins
- Added support for requests without origin (same-origin, mobile)
- Configured all HTTP methods: GET, POST, PUT, DELETE, PATCH, OPTIONS
- Set preflight cache to 24 hours

CONFIGURATION & DOCUMENTATION:
- Updated .env.example templates (frontend & backend)
- Documented all required production environment variables
- Enhanced .gitignore with security-critical files
- Added .npmrc for npm security settings
- Added .nvmrc for Node version consistency (18.17.0)

NEW DOCUMENTATION:
- MANIFEST_401_FIX_ANALYSIS.md: Root cause analysis and solutions
- PRODUCTION_READINESS_CHECKLIST.md: 9-phase deployment guide
- DEPLOYMENT_VERIFICATION.md: Post-deployment verification steps

SECURITY:
- Environment variables now properly documented
- Secrets management best practices included
- CSP headers configured
- CORS properly restricted to allowed origins
- Session security headers configured

BUILD VERIFIED:
- npm run build completes successfully
- manifest.json correctly placed in build/
- No critical build errors
- Ready for production deployment

--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,27 @@
-# Microsoft Graph API Configuration
-# Create an app registration in Azure AD to get these values
-# See README.md for setup instructions
+# Frontend Environment Variables
+# Copy to .env.production and fill in actual values for production
+# DO NOT commit actual values - use Vercel's environment variables panel
 
-# Application (client) ID from Azure AD app registration
-REACT_APP_CLIENT_ID=your-client-id-here
+# ==========================================
+# REQUIRED FOR PRODUCTION
+# ==========================================
 
-# Directory (tenant) ID from Azure AD app registration
-REACT_APP_AUTHORITY=https://login.microsoftonline.com/your-tenant-id
+# Backend API URL (points to your Vercel backend deployment)
+REACT_APP_API_URL=https://your-backend-domain.vercel.app
 
-# Redirect URI - should match your app registration
-REACT_APP_REDIRECT_URI=http://localhost:3000
+# ==========================================
+# OPTIONAL / DEVELOPMENT
+# ==========================================
 
-# Optional: API endpoint for custom backend (if needed)
-# REACT_APP_API_BASE_URL=http://localhost:5000/api
+# Microsoft Graph API Configuration (Legacy - now handled via backend)
+# REACT_APP_CLIENT_ID=your-client-id-here
+# REACT_APP_AUTHORITY=https://login.microsoftonline.com/your-tenant-id
+# REACT_APP_REDIRECT_URI=http://localhost:3000
+
+# ==========================================
+# PRODUCTION DEPLOYMENT CHECKLIST
+# ==========================================
+# [ ] Set REACT_APP_API_URL to backend deployment URL
+# [ ] Configure in Vercel Environment Variables
+# [ ] Do NOT commit .env file to git
+# [ ] Use .env.example as template only
