--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,32 +1,57 @@
 # Environment Variables - NEVER COMMIT THIS FILE TO GIT
+# Copy to .env and fill in actual values
+
+# ==========================================
+# REQUIRED FOR PRODUCTION
+# ==========================================
 
 # Server Configuration
-NODE_ENV=development
+NODE_ENV=production
 PORT=5000
-FRONTEND_URL=http://localhost:3000
+FRONTEND_URL=https://your-frontend-domain.vercel.app
 
-# Session Configuration
-SESSION_SECRET=change-this-to-a-long-random-string-at-least-32-characters
+# Session Security (Generate with: node -e "console.log(require('crypto').randomBytes(32).toString('hex'))")
+SESSION_SECRET=GENERATE-64-CHAR-HEX-STRING-HERE
 SESSION_MAX_AGE=3600000
 
-# Database Configuration (Neon Postgres - Recommended)
-# Get your connection string from: https://console.neon.tech
-# DATABASE_URL=postgresql://user:password@ep-xxxxx.us-east-2.aws.neon.tech/neondb?sslmode=require
+# Encryption (Generate with: node -e "console.log(require('crypto').randomBytes(32).toString('hex'))")
+ENCRYPTION_KEY=GENERATE-64-CHAR-HEX-STRING-HERE
 
-# Alternative: Redis for session storage
+# Database (Use Neon Postgres - Free tier at https://neon.tech)
+DATABASE_URL=postgresql://user:password@ep-xxxxx.us-east-2.aws.neon.tech/neondb?sslmode=require
+
+# Security
+ALLOWED_ORIGINS=https://your-frontend-domain.vercel.app
+SECURE_COOKIES=true
+TRUST_PROXY=true
+
+# ==========================================
+# OPTIONAL / DEFAULTS
+# ==========================================
+
+# Alternative: Redis for session storage (if not using Postgres)
 # REDIS_URL=redis://localhost:6379
-
-# Encryption Key (32 bytes hex string for AES-256)
-ENCRYPTION_KEY=generate-a-random-32-byte-hex-string-64-characters-long
 
 # Rate Limiting
 RATE_LIMIT_WINDOW_MS=900000
 RATE_LIMIT_MAX_REQUESTS=100
 
-# Azure AD Default Configuration (Optional - users can override in session)
+# Azure AD (Optional - Users can configure via UI)
 # AZURE_CLIENT_ID=
 # AZURE_TENANT_ID=
-# AZURE_REDIRECT_URI=http://localhost:5000/api/auth/callback
+# AZURE_REDIRECT_URI=https://your-backend-domain.vercel.app/api/auth/callback
+
+# ==========================================
+# PRODUCTION DEPLOYMENT CHECKLIST
+# ==========================================
+# [ ] Generate new SESSION_SECRET (64 hex chars)
+# [ ] Generate new ENCRYPTION_KEY (64 hex chars)  
+# [ ] Create Neon Postgres account and get DATABASE_URL
+# [ ] Set FRONTEND_URL to your Vercel frontend domain
+# [ ] Set ALLOWED_ORIGINS to match frontend domain
+# [ ] Set NODE_ENV=production
+# [ ] Set SECURE_COOKIES=true (HTTPS only)
+# [ ] Set TRUST_PROXY=true (for Vercel)
 
 # Logging
 LOG_LEVEL=info
