--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@
 .env.development.local
 .env.test.local
 .env.production.local
+.env.production
 
 npm-debug.log*
 yarn-debug.log*
@@ -36,3 +37,26 @@ yarn-error.log*
 
 # Vercel
 .vercel
+
+# IDE
+.vscode/settings.json
+.vscode/launch.json
+.VSCodeCounter/
+
+# OS
+Thumbs.db
+
+# Sensitive Data
+*.key
+*.pem
+secrets/
+.env.*.local
+
+# Build artifacts
+dist/
+out/
+
+# Logs
+logs/
+*.log
+
