feat: Interactive auth now uses backend Vercel env vars (AZURE_CLIENT_ID, AZURE_TENANT_ID)

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -36,10 +36,11 @@ TRUST_PROXY=true
 RATE_LIMIT_WINDOW_MS=900000
 RATE_LIMIT_MAX_REQUESTS=100
 
-# Azure AD (Optional - Users can configure via UI)
-# AZURE_CLIENT_ID=
-# AZURE_TENANT_ID=
-# AZURE_REDIRECT_URI=https://your-backend-domain.vercel.app/api/auth/callback
+# Azure AD Multi-Tenant App (For Interactive OAuth2 Authentication)
+# Set these in Vercel environment variables to enable interactive sign-in
+# Get these from your Azure AD App Registration
+AZURE_CLIENT_ID=your-multi-tenant-app-client-id
+AZURE_TENANT_ID=your-tenant-id
 
 # ==========================================
 # PRODUCTION DEPLOYMENT CHECKLIST
