feat: Add multi-tenant support for interactive OAuth2 authentication

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -42,6 +42,10 @@ RATE_LIMIT_MAX_REQUESTS=100
 AZURE_CLIENT_ID=your-multi-tenant-app-client-id
 AZURE_TENANT_ID=your-tenant-id
 
+# Set to 'true' for multi-tenant (allows users from any organization to sign in)
+# Set to 'false' or omit for single-tenant (only your organization)
+AZURE_MULTITENANT=true
+
 # ==========================================
 # PRODUCTION DEPLOYMENT CHECKLIST
 # ==========================================
