Add on-premises Active Directory integration for user creation
- Created backend/routes/ad.js with PowerShell remoting to create users in on-prem AD
- Added /api/ad/create-user endpoint for user creation via PowerShell
- Added /api/ad/config-status to check AD integration configuration
- Added /api/ad/test-connection to verify Domain Controller connectivity
- Added /api/ad/check-user/:samAccountName to verify user existence

Frontend updates:
- Updated OnboardingWizard.js with on-prem AD creation option
- Added checkbox to toggle between cloud-only and on-prem AD user creation
- Added auto-detection of AD configuration status
- Added visual indicators for hybrid identity sync process

Configuration:
- Added 6 new environment variables (AD_SERVER, AD_USERNAME, AD_PASSWORD, AD_DOMAIN, AD_DEFAULT_OU, AD_DEFAULT_PASSWORD)
- Updated backend/server.js to include AD routes
- Updated README.md to mention on-prem AD support

Documentation:
- Created ON_PREM_AD_SETUP.md - comprehensive setup and security guide
- Created ON_PREM_AD_QUICK_START.md - quick reference for users
- Created ON_PREM_AD_CONFIGURATION.md - example configurations and testing
- Created ON_PREM_AD_IMPLEMENTATION.md - architecture overview

Features:
- Users created in on-prem AD automatically sync to Azure AD via Azure AD Connect
- Supports hybrid identity management with 30-minute sync window
- Includes security features: input escaping, service account permissions, audit logging
- Comprehensive error handling and logging
- WinRM/PowerShell remoting for remote AD operations

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -47,6 +47,28 @@ AZURE_TENANT_ID=your-tenant-id
 AZURE_MULTITENANT=true
 
 # ==========================================
+# ON-PREMISES ACTIVE DIRECTORY INTEGRATION
+# ==========================================
+# Configure these to enable on-premises user creation that syncs to Azure AD
+
+# AD Domain Controller hostname or IP
+AD_SERVER=dc01.yourdomain.com
+
+# Service account with AD user creation permissions
+AD_USERNAME=svc_adcreate
+AD_PASSWORD=SecurePassword123!
+
+# Active Directory domain name
+AD_DOMAIN=YOURDOMAIN
+
+# Default Organizational Unit for new users
+# Example: OU=NewUsers,OU=Employees,DC=yourdomain,DC=com
+AD_DEFAULT_OU=OU=Users,DC=yourdomain,DC=com
+
+# Default temporary password for new users (must meet your AD password policy)
+AD_DEFAULT_PASSWORD=TempPass123!
+
+# ==========================================
 # PRODUCTION DEPLOYMENT CHECKLIST
 # ==========================================
 # [ ] Generate new SESSION_SECRET (64 hex chars)
