Add comprehensive FAQ with hybrid Exchange support
Features:
- Complete FAQ component with 8 categories and 31 questions
- Comprehensive hybrid Exchange environment support
- Backend API for Exchange management (10 endpoints)
- PowerShell remoting to on-premises Exchange Server
- Automatic mailbox detection (on-prem vs remote vs cloud)
- Mailbox migration capabilities (on-prem to Exchange Online)
- Unified offboarding for both mailbox types
- FAQ accessible at /faq route (public access)

Hybrid Exchange Capabilities:
- Create remote mailboxes (cloud mailboxes for on-prem users)
- Convert to shared mailbox (both platforms)
- Email forwarding configuration (both platforms)
- Auto-reply/OOF management (both platforms)
- Mailbox move requests with progress monitoring
- Intelligent routing based on mailbox type
- Visual indicators for mailbox location

Backend API Endpoints:
- GET /api/exchange/config-status - Check Exchange configuration
- POST /api/exchange/test-connection - Test Exchange Server connectivity
- GET /api/exchange/mailbox/:identity - Get mailbox details
- POST /api/exchange/create-remote-mailbox - Create cloud mailbox
- POST /api/exchange/convert-to-shared - Convert to shared mailbox
- POST /api/exchange/set-forwarding - Configure forwarding
- POST /api/exchange/set-auto-reply - Set out-of-office
- POST /api/exchange/move-to-cloud - Migrate mailbox to cloud
- GET /api/exchange/move-request/:identity - Check migration status
- GET /api/exchange/mailbox-type/:identity - Detect mailbox location

Environment Variables Added:
- EXCHANGE_SERVER - Exchange Server hostname
- EXCHANGE_USERNAME - Service account username
- EXCHANGE_PASSWORD - Service account password
- EXCHANGE_DOMAIN - Domain for authentication
- EXCHANGE_REMOTE_DOMAIN - Remote routing domain

Documentation:
- HYBRID_EXCHANGE_GUIDE.md - Complete setup and usage guide
- FAQ_IMPLEMENTATION.md - FAQ feature documentation
- All hybrid Exchange info included directly in FAQ page

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -69,6 +69,26 @@ AD_DEFAULT_OU=OU=Users,DC=yourdomain,DC=com
 AD_DEFAULT_PASSWORD=TempPass123!
 
 # ==========================================
+# HYBRID EXCHANGE ENVIRONMENT INTEGRATION
+# ==========================================
+# Configure these to manage mailboxes in hybrid Exchange environments
+# (Exchange Server on-premises + Exchange Online)
+
+# Exchange Server hostname or FQDN
+EXCHANGE_SERVER=exchange01.yourdomain.com
+
+# Service account with Exchange Organization Management permissions
+EXCHANGE_USERNAME=svc_exchange
+EXCHANGE_PASSWORD=SecurePassword123!
+
+# Domain for Exchange authentication
+EXCHANGE_DOMAIN=YOURDOMAIN
+
+# Remote routing domain for Exchange Online (your .onmicrosoft.com domain)
+# Example: contoso.mail.onmicrosoft.com
+EXCHANGE_REMOTE_DOMAIN=yourtenant.mail.onmicrosoft.com
+
+# ==========================================
 # PRODUCTION DEPLOYMENT CHECKLIST
 # ==========================================
 # [ ] Generate new SESSION_SECRET (64 hex chars)
