--- a/package.json
+++ b/package.json
@@ -6,21 +6,25 @@
   "dependencies": {
     "@azure/msal-browser": "^2.38.0",
     "@azure/msal-react": "^1.5.8",
-    "@microsoft/microsoft-graph-client": "^3.0.5",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.1",
-    "react-scripts": "5.0.1",
-    "tailwindcss": "^3.2.7",
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.47",
     "@headlessui/react": "^1.7.13",
     "@heroicons/react": "^2.0.16",
+    "@microsoft/microsoft-graph-client": "^3.0.5",
+    "autoprefixer": "^10.4.14",
     "axios": "^1.3.4",
     "date-fns": "^2.29.3",
+    "i18next": "25.6.0",
+    "i18next-browser-languagedetector": "8.2.0",
+    "i18next-http-backend": "3.0.2",
+    "postcss": "^8.4.47",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.5",
     "react-hot-toast": "^2.4.0",
+    "react-i18next": "16.1.6",
+    "react-router-dom": "^6.8.1",
+    "react-scripts": "5.0.1",
     "react-step-progress-bar": "^1.0.3",
+    "tailwindcss": "^3.2.7",
     "web-vitals": "^3.3.0"
   },
   "scripts": {
