fix: Enable legacy-peer-deps in .npmrc for Vercel deployment
- Set legacy-peer-deps=true in .npmrc (Vercel reads this automatically)
- Remove installCommand from vercel.json (not supported in builds config)
- Fixes i18next TypeScript v5 peer dependency conflict with react-scripts v5.0.1
- Resolves npm ERESOLVE error during Vercel build process

--- a/.npmrc
+++ b/.npmrc
@@ -9,5 +9,5 @@ publish-access=restricted
 # Audit settings
 audit-level=moderate
 
-# Legacy peer deps (if needed for React compatibility)
-legacy-peer-deps=false
+# Legacy peer deps (required for i18next TypeScript compatibility)
+legacy-peer-deps=true
