--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
   "dependencies": {
     "@azure/msal-browser": "^2.38.0",
     "@azure/msal-react": "^1.5.8",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@headlessui/react": "^1.7.13",
     "@heroicons/react": "^2.0.16",
     "@microsoft/microsoft-graph-client": "^3.0.5",
+    "@mui/icons-material": "^5.14.19",
+    "@mui/material": "^5.14.20",
     "autoprefixer": "^10.4.14",
     "axios": "^1.3.4",
     "date-fns": "^2.29.3",
