feat: Migrate to Convex serverless backend
- Replace Express.js backend with Convex serverless platform
- Implement multi-tenant database schema with sessions, offboarding, and audit_log tables
- Create authentication functions for app-only and OAuth2 modes
- Implement offboarding CRUD operations with tenant isolation
- Add Microsoft Graph API integration via Convex actions
- Create ConvexAuthContext for frontend authentication
- Add convexService for session management
- Update React app to use ConvexProvider
- Deploy to Convex production: https://honorable-rhinoceros-110.convex.cloud
- Add comprehensive migration guide documentation

Benefits:
- No session management issues (database-backed sessions)
- Real-time updates with Convex reactive queries
- Automatic scaling with serverless architecture
- Zero infrastructure management
- Built-in multi-tenancy support
- Type-safe with auto-generated TypeScript types

--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,10 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+# Convex
+.env.local
+src/convex/_generated/
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
