--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.14.20",
     "autoprefixer": "^10.4.14",
     "axios": "^1.3.4",
+    "convex": "1.29.0",
     "date-fns": "^2.29.3",
     "i18next": "25.6.0",
     "i18next-browser-languagedetector": "8.2.0",
