--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
-    "vercel-build": "react-scripts build",
+    "build": "npx convex codegen --typecheck=disable && react-scripts build",
+    "vercel-build": "npx convex codegen --typecheck=disable && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
