chore: Update Convex production URL to neighborly-manatee-845

--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,7 @@
 DISABLE_ESLINT_PLUGIN=true
 
-# Convex Production URL
-REACT_APP_CONVEX_URL=https://honorable-rhinoceros-110.convex.cloud
+# Convex Production URL (deployed functions)
+REACT_APP_CONVEX_URL=https://neighborly-manatee-845.convex.cloud
+
+# Convex Deploy Key (for Vercel build - set in Vercel dashboard)
+# CONVEX_DEPLOY_KEY=prod:your-production-deploy-key-here
