--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "Employee Offboarding Portal with Microsoft Graph and Intune integration",
   "private": true,
   "dependencies": {
+    "@auth/core": "0.37.4",
     "@azure/msal-browser": "^2.38.0",
     "@azure/msal-react": "^1.5.8",
+    "@convex-dev/auth": "0.0.90",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@headlessui/react": "^1.7.13",
