--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@auth/core": "0.37.4",
     "@azure/msal-browser": "^2.38.0",
     "@azure/msal-react": "^1.5.8",
-    "@convex-dev/auth": "0.0.90",
+    "@clerk/clerk-react": "5.55.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@headlessui/react": "^1.7.13",
