feat: add Clerk to Graph API proxy for SSO users
- Create backend proxy endpoint at /api/clerk-proxy
- Validate Clerk JWT tokens with Clerk API
- Acquire Graph API tokens using client credentials
- Support GET/POST/PATCH/DELETE requests to Microsoft Graph
- Create clerkGraphService with same API as graphService
- Update Dashboard to dynamically select service based on authMode
- Remove configuration prompt (proxy handles Graph API access)
- Update .env.example with required Clerk and Azure credentials

Enables Clerk-authenticated users to access Microsoft Graph API
without needing MSAL or manual credential configuration.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -36,15 +36,20 @@ TRUST_PROXY=true
 RATE_LIMIT_WINDOW_MS=900000
 RATE_LIMIT_MAX_REQUESTS=100
 
-# Azure AD Multi-Tenant App (For Interactive OAuth2 Authentication)
-# Set these in Vercel environment variables to enable interactive sign-in
+# Azure AD App (For Graph API Access)
+# Required for both app-only auth and Clerk proxy
 # Get these from your Azure AD App Registration
-AZURE_CLIENT_ID=your-multi-tenant-app-client-id
+AZURE_CLIENT_ID=your-app-client-id
 AZURE_TENANT_ID=your-tenant-id
+AZURE_CLIENT_SECRET=your-app-client-secret
 
 # Set to 'true' for multi-tenant (allows users from any organization to sign in)
 # Set to 'false' or omit for single-tenant (only your organization)
 AZURE_MULTITENANT=true
+
+# Clerk Configuration (For Clerk-based authentication with Graph API proxy)
+# Get this from Clerk Dashboard → API Keys
+CLERK_SECRET_KEY=sk_live_your-clerk-secret-key
 
 # ==========================================
 # ON-PREMISES ACTIVE DIRECTORY INTEGRATION
