--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@azure/msal-browser": "^2.38.0",
     "@azure/msal-react": "^1.5.8",
     "@clerk/clerk-react": "5.55.0",
+    "@convex-dev/auth": "0.0.90",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@headlessui/react": "^1.7.13",
