--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "i18next": "25.6.0",
     "i18next-browser-languagedetector": "8.2.0",
     "i18next-http-backend": "3.0.2",
+    "jspdf": "3.0.3",
+    "jspdf-autotable": "5.0.2",
     "postcss": "^8.4.47",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
