feat: Add employeelifecycleportal.com domains to CORS configuration
- Added employeelifecycleportal.com (correct spelling)
- Added www.employeelifecycleportal.com
- Kept employeelifecyclepotral.com (typo) for backward compatibility
- Updated Convex proxy, backend server, and .env.example
- Supports both http and https for all variants

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -109,7 +109,7 @@ EXCHANGE_REMOTE_DOMAIN=yourtenant.mail.onmicrosoft.com
 LOG_LEVEL=info
 
 # CORS
-ALLOWED_ORIGINS=http://localhost:3000,http://localhost:3001
+ALLOWED_ORIGINS=http://localhost:3000,http://localhost:3001,https://employeelifecyclepotral.com,https://www.employeelifecyclepotral.com,https://employeelifecycleportal.com,https://www.employeelifecycleportal.com
 
 # Security Headers
 ENABLE_HELMET=true
