--- a/convex/tsconfig.json
+++ b/convex/tsconfig.json
@@ -7,10 +7,11 @@
     /* These settings are not required by Convex and can be modified. */
     "allowJs": true,
     "strict": false,
-    "moduleResolution": "node",
+    "moduleResolution": "bundler",
     "jsx": "react-jsx",
     "skipLibCheck": true,
     "allowSyntheticDefaultImports": true,
+    "ignoreDeprecations": "6.0",
 
     /* These compiler options are required by Convex */
     "target": "ESNext",
