--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,8 +2,9 @@
   "compilerOptions": {
     "baseUrl": "src",
     "module": "esnext",
-    "moduleResolution": "node",
-    "resolveJsonModule": true
+    "moduleResolution": "bundler",
+    "resolveJsonModule": true,
+    "ignoreDeprecations": "6.0"
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "build"]
